# MindJournal-AI

./: .dockerignore  .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
android/app/src/main/java/com/mindjournalai/app/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/: App.tsx  README.md  package-lock.json  package.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/src/: storage.ts
server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
server/app/: auth.py  config.py  rate_limit.py  routes.py  serialization.py
server/app/models/: concepts_request.py  psychology_concept.py  psychology_concepts.py  summarize_request.py  summary.py  weekly_summary.py
server/app/services/: concept_finder.py  summarizer.py  weekly_summarizer.py
server/tests/: conftest.py  test_endpoints.py
src/: GirlWaving.tsx  storage.ts
